fixed some spacing issues between about & hero sections

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -5,7 +5,7 @@
   background-color: rgba(12, 12, 12, .6);
   border-radius: 15px;
   padding: 73px;
-  margin-top: 129px;
+  margin-top: 30px;
   z-index: 1;
   margin-left: 10%;
   margin-right: 10%;
@@ -24,7 +24,6 @@
   flex-direction: row;
   align-items: center;
 }
-
 
 .aboutItems {
   color: var(--color-text);
@@ -58,7 +57,7 @@
 }
 
 .aboutItem p {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 .aboutImg {
@@ -66,7 +65,6 @@
   max-height: 250px;
   border-radius: 50px;
   z-index: 1;
-
   animation-name: floating;
   animation-duration: 3s;
   animation-iteration-count: infinite;
