--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -119,7 +119,7 @@
 
 .skillItem {
   font-size: 16px;
-  margin-bottom: 12px;
+  margin-bottom: 3px;
   display: flex;
   align-items: flex-start;
   gap: 12px;
@@ -140,8 +140,8 @@
 }
 
 .skillText {
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 20px;
+  line-height: 1.25;
   color: rgba(255, 255, 255, 0.9);
 }
 
